--- a/SenseVoice/requirements.txt
+++ b/SenseVoice/requirements.txt
@@ -1,9 +1,150 @@
-torch<=2.3
-torchaudio
-modelscope
-huggingface
-huggingface_hub
-funasr>=1.1.3
-numpy<=1.26.4
-gradio
-fastapi>=0.111.1
+aiofiles==23.2.1
+albucore==0.0.23
+albumentations==2.0.5
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-kms==2.16.5
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+astor==0.8.1
+audioread==3.0.1
+beautifulsoup4==4.13.3
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.0
+crcmod==1.7
+cryptography==44.0.2
+cycler==0.12.1
+Cython==3.0.12
+decorator==5.2.1
+editdistance==0.8.1
+eval_type_backport==0.2.2
+exceptiongroup==1.2.2
+fastapi==0.115.11
+ffmpy==0.5.0
+filelock==3.18.0
+fire==0.7.0
+fonttools==4.56.0
+fsspec==2025.3.0
+funasr==1.2.6
+gradio==4.44.1
+gradio_client==1.3.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface==0.0.1
+huggingface-hub==0.29.3
+hydra-core==1.3.2
+idna==3.10
+imageio==2.37.0
+importlib_resources==6.5.2
+intel-openmp==2021.4.0
+jaconv==0.4.0
+jamo==0.4.1
+jieba==0.42.1
+Jinja2==3.1.6
+jmespath==0.10.0
+joblib==1.4.2
+kaldiio==2.18.1
+kiwisolver==1.4.7
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.43.0
+lmdb==1.6.2
+lxml==5.3.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.4
+mdurl==0.1.2
+mkl==2021.4.0
+modelscope==1.24.0
+mpmath==1.3.0
+msgpack==1.1.0
+networkx==3.2.1
+numba==0.60.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.3.4.1
+nvidia-cuda-nvrtc-cu12==12.6.85
+nvidia-cuda-runtime-cu12==12.3.101
+nvidia-cudnn-cu12==9.0.0.312
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nvjitlink-cu12==12.6.85
+omegaconf==2.3.0
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+opt-einsum==3.3.0
+orjson==3.10.15
+oss2==2.19.1
+packaging==24.2
+paddleocr==2.10.0
+paddlepaddle-gpu==3.0.0b1
+pandas==2.2.3
+pillow==10.4.0
+platformdirs==4.3.6
+pooch==1.8.2
+protobuf==6.30.1
+PyAudio==0.2.14
+pyclipper==1.3.0.post6
+pycparser==2.22
+pycryptodome==3.22.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+pydub==0.25.1
+Pygments==2.19.1
+PyJWT==2.8.0
+pynndescent==0.5.13
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-multipart==0.0.20
+pytorch-wpe==0.0.1
+pytz==2025.1
+PyYAML==6.0.2
+RapidFuzz==3.12.2
+requests==2.32.3
+rich==13.9.4
+ruff==0.11.0
+scikit-image==0.24.0
+scikit-learn==1.6.1
+scipy==1.13.1
+semantic-version==2.10.0
+sentencepiece==0.2.0
+shapely==2.0.7
+shellingham==1.5.4
+simsimd==6.2.1
+six==1.17.0
+sniffio==1.3.1
+sounddevice==0.5.1
+soundfile==0.13.1
+soupsieve==2.6
+soxr==0.5.0.post1
+starlette==0.46.1
+stringzilla==3.12.3
+sympy==1.13.3
+tbb==2021.13.1
+tensorboardX==2.6.2.2
+termcolor==2.5.0
+threadpoolctl==3.6.0
+tifffile==2024.8.30
+tomlkit==0.12.0
+torch==2.3.0
+torch-complex==0.4.4
+torchaudio==2.3.0
+tqdm==4.67.1
+typer==0.15.2
+typing_extensions==4.12.2
+tzdata==2025.1
+umap-learn==0.5.7
+urllib3==2.3.0
+uvicorn==0.34.0
+websockets==12.0
+zhipuai==2.1.5.20250106
+zipp==3.21.0
