--- a/SenseVoice/requirements.txt
+++ b/SenseVoice/requirements.txt
@@ -3,10 +3,13 @@ albucore==0.0.23
 albumentations==2.0.5
 aliyun-python-sdk-core==2.16.0
 aliyun-python-sdk-kms==2.16.5
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
 anyio==4.9.0
 astor==0.8.1
+attrs==25.3.0
 audioread==3.0.1
 beautifulsoup4==4.13.3
 cachetools==5.5.2
@@ -24,6 +27,7 @@ decorator==5.2.1
 editdistance==0.8.1
 eval_type_backport==0.2.2
 exceptiongroup==1.2.2
+execnet==2.1.1
 fastapi==0.115.11
 ffmpy==0.5.0
 filelock==3.18.0
@@ -42,6 +46,7 @@ hydra-core==1.3.2
 idna==3.10
 imageio==2.37.0
 importlib_resources==6.5.2
+iniconfig==2.1.0
 intel-openmp==2021.4.0
 jaconv==0.4.0
 jamo==0.4.1
@@ -89,6 +94,7 @@ paddlepaddle-gpu==3.0.0b1
 pandas==2.2.3
 pillow==10.4.0
 platformdirs==4.3.6
+pluggy==1.5.0
 pooch==1.8.2
 protobuf==6.30.1
 PyAudio==0.2.14
@@ -102,6 +108,13 @@ Pygments==2.19.1
 PyJWT==2.8.0
 pynndescent==0.5.13
 pyparsing==3.2.1
+pytest==8.3.5
+pytest-base-url==2.1.0
+pytest-html==4.1.1
+pytest-metadata==3.1.1
+pytest-ordering==0.6
+pytest-rerunfailures==15.0
+pytest-xdist==3.6.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-multipart==0.0.20
@@ -134,6 +147,7 @@ tensorboardX==2.6.2.2
 termcolor==2.5.0
 threadpoolctl==3.6.0
 tifffile==2024.8.30
+tomli==2.2.1
 tomlkit==0.12.0
 torch==2.3.0
 torch-complex==0.4.4
